telex-station/station/bro-1.5.1/aux/binpac/src/pac_parse.output
Terminals unused in grammar

   TOK_HELPERHEADER
   TOK_HELPERCODE
   TOK_INT8
   TOK_INT16
   TOK_INT32
   TOK_UINT8
   TOK_UINT16
   TOK_UINT32
   TOK_ATTR_ALSO
   TOK_HELPER
   TOK_PAC_TYPEOF


Grammar

    0 $accept: decls $end

    1 decls: /* empty */
    2      | decls decl optsemicolon

    3 decl: decl_with_attr optattrs
    4     | decl_without_attr

    5 $@1: /* empty */

    6 decl_with_attr: TOK_TYPE tok_id $@1 optparams '=' type

    7 $@2: /* empty */

    8 decl_with_attr: TOK_LET tok_id $@2 opttype optinit
    9               | TOK_FUNCTION function

   10 $@3: /* empty */

   11 decl_with_attr: TOK_ENUM tok_id $@3 '{' enumlist '}'

   12 $@4: /* empty */

   13 decl_with_attr: TOK_EXTERN TOK_TYPE tok_id $@4

   14 $@5: /* empty */

   15 decl_with_attr: TOK_ANALYZER tok_id $@5 TOK_WITHCONTEXT analyzercontext

   16 $@6: /* empty */

   17 decl_with_attr: TOK_ANALYZER tok_id $@6 optparams '{' conn '}'

   18 $@7: /* empty */

   19 decl_with_attr: TOK_CONNECTION tok_id $@7 optparams '{' conn '}'

   20 $@8: /* empty */

   21 decl_with_attr: TOK_FLOW tok_id $@8 optparams '{' flow '}'
   22               | TOK_REFINE TOK_CASETYPE tok_id TOK_PLUSEQ '{' casefieldlist '}'
   23               | TOK_REFINE TOK_CASEFUNC tok_id TOK_PLUSEQ '{' caseexprlist '}'
   24               | TOK_REFINE TOK_ANALYZER tok_id TOK_PLUSEQ '{' sahlist '}'
   25               | TOK_REFINE TOK_CONNECTION tok_id TOK_PLUSEQ '{' sahlist '}'
   26               | TOK_REFINE TOK_FLOW tok_id TOK_PLUSEQ '{' sahlist '}'

   27 decl_without_attr: TOK_LPB_HEADER embedded_code TOK_RPB
   28                  | TOK_LPB_CODE embedded_code TOK_RPB
   29                  | TOK_LPB_EXTERN embedded_code TOK_RPB
   30                  | TOK_REFINE TOK_TYPEATTR tok_id TOK_PLUSEQ attrlist

   31 optsemicolon: /* empty */
   32             | ';'

   33 tok_id: TOK_ID
   34       | TOK_CONNECTION
   35       | TOK_ANALYZER
   36       | TOK_FLOW
   37       | TOK_FUNCTION
   38       | TOK_TYPE

   39 analyzercontext: '{' contextfieldlist '}'

   40 contextfieldlist: contextfieldlist contextfield ';'
   41                 | /* empty */

   42 contextfield: tok_id ':' type1

   43 funcproto: tok_id '(' paramlist ')' ':' type2

   44 function: funcproto '=' expr
   45         | funcproto TOK_LPB embedded_code TOK_RPB
   46         | funcproto ';'

   47 optparams: '(' paramlist ')'
   48          | /* empty */

   49 paramlist: paramlist ',' param
   50          | param
   51          | /* empty */

   52 param: tok_id ':' type2

   53 optinit: /* empty */
   54        | '=' expr

   55 opttype: /* empty */
   56        | ':' type2

   57 type: type3

   58 type3: type2
   59      | TOK_RECORD '{' recordfieldlist '}'

   60 type2: type1
   61      | type1 '[' expr ']'
   62      | type1 '[' ']'
   63      | TOK_CASE caseindex TOK_OF '{' casefieldlist '}'

   64 type1: tok_id
   65      | tok_id '(' exprlist ')'
   66      | regex
   67      | cstr

   68 recordfieldlist: recordfieldlist recordfield ';'
   69                | /* empty */

   70 recordfield: recordfield0 optattrs

   71 recordfield0: optfieldid type2
   72             | padding

   73 padding: optfieldid TOK_PADDING '[' expr ']'
   74        | optfieldid TOK_PADDING TOK_TO expr
   75        | optfieldid TOK_PADDING TOK_ALIGN expr

   76 optfieldid: tok_id ':'
   77           | ':'

   78 caseindex: expr

   79 casefieldlist: casefieldlist casefield ';'
   80              | /* empty */

   81 casefield: casefield0 optattrs

   82 casefield0: exprlist TOK_RIGHTARROW tok_id ':' type2
   83           | TOK_DEFAULT TOK_RIGHTARROW tok_id ':' type2

   84 optexprlist: /* empty */
   85            | exprlist

   86 exprlist: exprlist ',' expr
   87         | expr

   88 expr: tok_id
   89     | TOK_NUMBER
   90     | expr '[' expr ']'
   91     | expr '.' tok_id
   92     | TOK_SIZEOF '(' tok_id ')'
   93     | TOK_OFFSETOF '(' tok_id ')'
   94     | '(' expr ')'
   95     | expr '(' optexprlist ')'
   96     | '-' expr
   97     | expr '+' expr
   98     | expr '-' expr
   99     | expr '*' expr
  100     | expr '/' expr
  101     | expr '%' expr
  102     | '~' expr
  103     | expr '&' expr
  104     | expr '|' expr
  105     | expr '^' expr
  106     | expr TOK_LSHIFT expr
  107     | expr TOK_RSHIFT expr
  108     | expr TOK_EQUAL expr
  109     | expr TOK_NEQ expr
  110     | expr TOK_GE expr
  111     | expr TOK_LE expr
  112     | expr '>' expr
  113     | expr '<' expr
  114     | '!' expr
  115     | expr TOK_AND expr
  116     | expr TOK_OR expr
  117     | expr '?' expr ':' expr
  118     | TOK_CASE expr TOK_OF '{' caseexprlist '}'
  119     | cstr
  120     | regex

  121 cstr: TOK_STRING

  122 regex: TOK_BEGIN_RE TOK_REGEX TOK_END_RE

  123 caseexprlist: /* empty */
  124             | caseexprlist caseexpr ';'

  125 caseexpr: exprlist TOK_RIGHTARROW expr
  126         | TOK_DEFAULT TOK_RIGHTARROW expr

  127 enumlist: enumlist1
  128         | enumlist1 ','

  129 enumlist1: enumlist1 ',' enumitem
  130          | enumitem

  131 enumitem: tok_id
  132         | tok_id '=' expr

  133 conn: sahlist

  134 flow: sahlist

  135 sahlist: /* empty */
  136        | sahlist sah

  137 sah: TOK_LPB_MEMBER embedded_code TOK_RPB
  138    | TOK_LPB_INIT embedded_code TOK_RPB
  139    | TOK_LPB_CLEANUP embedded_code TOK_RPB
  140    | TOK_LPB_EOF embedded_code TOK_RPB
  141    | TOK_FLOWDIR '=' tok_id optargs ';'
  142    | TOK_DATAUNIT '=' tok_id optargs TOK_WITHCONTEXT '(' optexprlist ')' ';'
  143    | TOK_FUNCTION function
  144    | TOK_STATE '{' statevarlist '}'
  145    | TOK_ACTION tok_id TOK_WHEN '(' actionparam ')' TOK_LPB embedded_code TOK_RPB

  146 statevarlist: /* empty */
  147             | statevarlist statevar ';'

  148 statevar: tok_id ':' type1

  149 actionparam: tok_id TOK_LE actionparamtype

  150 actionparamtype: tok_id
  151                | tok_id '.' tok_id

  152 embedded_code: /* empty */
  153              | embedded_code TOK_EMBEDDED_ATOM
  154              | embedded_code TOK_EMBEDDED_STRING
  155              | embedded_code embedded_pac_primitive

  156 embedded_pac_primitive: TOK_PAC_VAL expr TOK_END_PAC
  157                       | TOK_PAC_SET expr TOK_END_PAC
  158                       | TOK_PAC_TYPE expr TOK_END_PAC
  159                       | TOK_PAC_CONST_DEF tok_id '=' expr TOK_END_PAC

  160 optargs: /* empty */
  161        | '(' optexprlist ')'

  162 letfieldlist: letfieldlist letfield ';'
  163             | letfieldlist withinputfield ';'
  164             | /* empty */

  165 letfield: tok_id opttype optinit optattrs

  166 withinputfield: tok_id ':' type1 TOK_WITHINPUT input optattrs

  167 input: expr

  168 optattrs: /* empty */
  169         | attrlist

  170 attrlist: attrlist optcomma attr
  171         | attr

  172 optcomma: /* empty */
  173         | ','

  174 attr: TOK_ATTR_BYTEORDER '=' expr
  175     | TOK_ATTR_CHECK expr
  176     | TOK_ATTR_CHUNKED
  177     | TOK_ATTR_EXPORTSOURCEDATA
  178     | TOK_ATTR_IF expr
  179     | TOK_ATTR_LENGTH '=' expr
  180     | TOK_ATTR_LET '{' letfieldlist '}'
  181     | TOK_ATTR_LINEBREAKER '=' expr
  182     | TOK_ATTR_MULTILINE '(' expr ')'
  183     | TOK_ATTR_ONELINE optlinebreaker
  184     | TOK_ATTR_REFCOUNT
  185     | TOK_ATTR_REQUIRES '(' optexprlist ')'
  186     | TOK_ATTR_RESTOFDATA
  187     | TOK_ATTR_RESTOFFLOW
  188     | TOK_ATTR_TRANSIENT
  189     | TOK_ATTR_UNTIL expr

  190 optlinebreaker: /* empty */
  191               | '(' expr ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 114
'%' (37) 101
'&' (38) 103
'(' (40) 43 47 65 92 93 94 95 142 145 161 182 185 191
')' (41) 43 47 65 92 93 94 95 142 145 161 182 185 191
'*' (42) 99
'+' (43) 97
',' (44) 49 86 128 129 173
'-' (45) 96 98
'.' (46) 91 151
'/' (47) 100
':' (58) 42 43 52 56 76 77 82 83 117 148 166
';' (59) 32 40 46 68 79 124 141 142 147 162 163
'<' (60) 113
'=' (61) 6 44 54 132 141 142 159 174 179 181
'>' (62) 112
'?' (63) 117
'[' (91) 61 62 73 90
']' (93) 61 62 73 90
'^' (94) 105
'{' (123) 11 17 19 21 22 23 24 25 26 39 59 63 118 144 180
'|' (124) 104
'}' (125) 11 17 19 21 22 23 24 25 26 39 59 63 118 144 180
'~' (126) 102
error (256)
TOK_TYPE (258) 6 13 38
TOK_RECORD (259) 59
TOK_CASE (260) 63 118
TOK_ENUM (261) 11
TOK_LET (262) 8
TOK_FUNCTION (263) 9 37 143
TOK_REFINE (264) 22 23 24 25 26 30
TOK_CASEFUNC (265) 23
TOK_CASETYPE (266) 22
TOK_TYPEATTR (267) 30
TOK_HELPERHEADER (268)
TOK_HELPERCODE (269)
TOK_RIGHTARROW (270) 82 83 125 126
TOK_DEFAULT (271) 83 126
TOK_OF (272) 63 118
TOK_PADDING (273) 73 74 75
TOK_TO (274) 74
TOK_ALIGN (275) 75
TOK_WITHINPUT (276) 166
TOK_INT8 (277)
TOK_INT16 (278)
TOK_INT32 (279)
TOK_UINT8 (280)
TOK_UINT16 (281)
TOK_UINT32 (282)
TOK_ID (283) 33
TOK_NUMBER (284) 89
TOK_REGEX (285) 122
TOK_STRING (286) 121
TOK_BEGIN_RE (287) 122
TOK_END_RE (288) 122
TOK_ATTR_ALSO (289)
TOK_ATTR_BYTEORDER (290) 174
TOK_ATTR_CHECK (291) 175
TOK_ATTR_CHUNKED (292) 176
TOK_ATTR_EXPORTSOURCEDATA (293) 177
TOK_ATTR_IF (294) 178
TOK_ATTR_LENGTH (295) 179
TOK_ATTR_LET (296) 180
TOK_ATTR_LINEBREAKER (297) 181
TOK_ATTR_MULTILINE (298) 182
TOK_ATTR_ONELINE (299) 183
TOK_ATTR_REFCOUNT (300) 184
TOK_ATTR_REQUIRES (301) 185
TOK_ATTR_RESTOFDATA (302) 186
TOK_ATTR_RESTOFFLOW (303) 187
TOK_ATTR_TRANSIENT (304) 188
TOK_ATTR_UNTIL (305) 189
TOK_ANALYZER (306) 15 17 24 35
TOK_CONNECTION (307) 19 25 34
TOK_FLOW (308) 21 26 36
TOK_STATE (309) 144
TOK_ACTION (310) 145
TOK_WHEN (311) 145
TOK_HELPER (312)
TOK_DATAUNIT (313) 142
TOK_FLOWDIR (314) 141
TOK_WITHCONTEXT (315) 15 142
TOK_LPB_EXTERN (316) 29
TOK_LPB_HEADER (317) 27
TOK_LPB_CODE (318) 28
TOK_LPB_MEMBER (319) 137
TOK_LPB_INIT (320) 138
TOK_LPB_CLEANUP (321) 139
TOK_LPB_EOF (322) 140
TOK_LPB (323) 45 145
TOK_RPB (324) 27 28 29 45 137 138 139 140 145
TOK_EMBEDDED_ATOM (325) 153
TOK_EMBEDDED_STRING (326) 154
TOK_PAC_VAL (327) 156
TOK_PAC_SET (328) 157
TOK_PAC_TYPE (329) 158
TOK_PAC_TYPEOF (330)
TOK_PAC_CONST_DEF (331) 159
TOK_END_PAC (332) 156 157 158 159
TOK_EXTERN (333) 13
TOK_PLUSEQ (334) 22 23 24 25 26 30
TOK_OR (335) 116
TOK_AND (336) 115
TOK_GE (337) 110
TOK_LE (338) 111 149
TOK_NEQ (339) 109
TOK_EQUAL (340) 108
TOK_RSHIFT (341) 107
TOK_LSHIFT (342) 106
TOK_OFFSETOF (343) 93
TOK_SIZEOF (344) 92


Nonterminals, with rules where they appear

$accept (114)
    on left: 0
decls (115)
    on left: 1 2, on right: 0 2
decl (116)
    on left: 3 4, on right: 2
decl_with_attr (117)
    on left: 6 8 9 11 13 15 17 19 21 22 23 24 25 26, on right: 3
$@1 (118)
    on left: 5, on right: 6
$@2 (119)
    on left: 7, on right: 8
$@3 (120)
    on left: 10, on right: 11
$@4 (121)
    on left: 12, on right: 13
$@5 (122)
    on left: 14, on right: 15
$@6 (123)
    on left: 16, on right: 17
$@7 (124)
    on left: 18, on right: 19
$@8 (125)
    on left: 20, on right: 21
decl_without_attr (126)
    on left: 27 28 29 30, on right: 4
optsemicolon (127)
    on left: 31 32, on right: 2
tok_id (128)
    on left: 33 34 35 36 37 38, on right: 6 8 11 13 15 17 19 21 22
    23 24 25 26 30 42 43 52 64 65 76 82 83 88 91 92 93 131 132 141
    142 145 148 149 150 151 159 165 166
analyzercontext (129)
    on left: 39, on right: 15
contextfieldlist (130)
    on left: 40 41, on right: 39 40
contextfield (131)
    on left: 42, on right: 40
funcproto (132)
    on left: 43, on right: 44 45 46
function (133)
    on left: 44 45 46, on right: 9 143
optparams (134)
    on left: 47 48, on right: 6 17 19 21
paramlist (135)
    on left: 49 50 51, on right: 43 47 49
param (136)
    on left: 52, on right: 49 50
optinit (137)
    on left: 53 54, on right: 8 165
opttype (138)
    on left: 55 56, on right: 8 165
type (139)
    on left: 57, on right: 6
type3 (140)
    on left: 58 59, on right: 57
type2 (141)
    on left: 60 61 62 63, on right: 43 52 56 58 71 82 83
type1 (142)
    on left: 64 65 66 67, on right: 42 60 61 62 148 166
recordfieldlist (143)
    on left: 68 69, on right: 59 68
recordfield (144)
    on left: 70, on right: 68
recordfield0 (145)
    on left: 71 72, on right: 70
padding (146)
    on left: 73 74 75, on right: 72
optfieldid (147)
    on left: 76 77, on right: 71 73 74 75
caseindex (148)
    on left: 78, on right: 63
casefieldlist (149)
    on left: 79 80, on right: 22 63 79
casefield (150)
    on left: 81, on right: 79
casefield0 (151)
    on left: 82 83, on right: 81
optexprlist (152)
    on left: 84 85, on right: 95 142 161 185
exprlist (153)
    on left: 86 87, on right: 65 82 85 86 125
expr (154)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
    105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120,
    on right: 44 54 61 73 74 75 78 86 87 90 91 94 95 96 97 98 99 100
    101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116
    117 118 125 126 132 156 157 158 159 167 174 175 178 179 181 182
    189 191
cstr (155)
    on left: 121, on right: 67 119
regex (156)
    on left: 122, on right: 66 120
caseexprlist (157)
    on left: 123 124, on right: 23 118 124
caseexpr (158)
    on left: 125 126, on right: 124
enumlist (159)
    on left: 127 128, on right: 11
enumlist1 (160)
    on left: 129 130, on right: 127 128 129
enumitem (161)
    on left: 131 132, on right: 129 130
conn (162)
    on left: 133, on right: 17 19
flow (163)
    on left: 134, on right: 21
sahlist (164)
    on left: 135 136, on right: 24 25 26 133 134 136
sah (165)
    on left: 137 138 139 140 141 142 143 144 145, on right: 136
statevarlist (166)
    on left: 146 147, on right: 144 147
statevar (167)
    on left: 148, on right: 147
actionparam (168)
    on left: 149, on right: 145
actionparamtype (169)
    on left: 150 151, on right: 149
embedded_code (170)
    on left: 152 153 154 155, on right: 27 28 29 45 137 138 139 140
    145 153 154 155
embedded_pac_primitive (171)
    on left: 156 157 158 159, on right: 155
optargs (172)
    on left: 160 161, on right: 141 142
letfieldlist (173)
    on left: 162 163 164, on right: 162 163 180
letfield (174)
    on left: 165, on right: 162
withinputfield (175)
    on left: 166, on right: 163
input (176)
    on left: 167, on right: 166
optattrs (177)
    on left: 168 169, on right: 3 70 81 165 166
attrlist (178)
    on left: 170 171, on right: 30 169 170
optcomma (179)
    on left: 172 173, on right: 170
attr (180)
    on left: 174 175 176 177 178 179 180 181 182 183 184 185 186 187
    188 189, on right: 170 171
optlinebreaker (181)
    on left: 190 191, on right: 183


state 0

    0 $accept: . decls $end

    $default  reduce using rule 1 (decls)

    decls  go to state 1


state 1

    0 $accept: decls . $end
    2 decls: decls . decl optsemicolon

    $end            shift, and go to state 2
    TOK_TYPE        shift, and go to state 3
    TOK_ENUM        shift, and go to state 4
    TOK_LET         shift, and go to state 5
    TOK_FUNCTION    shift, and go to state 6
    TOK_REFINE      shift, and go to state 7
    TOK_ANALYZER    shift, and go to state 8
    TOK_CONNECTION  shift, and go to state 9
    TOK_FLOW        shift, and go to state 10
    TOK_LPB_EXTERN  shift, and go to state 11
    TOK_LPB_HEADER  shift, and go to state 12
    TOK_LPB_CODE    shift, and go to state 13
    TOK_EXTERN      shift, and go to state 14

    decl               go to state 15
    decl_with_attr     go to state 16
    decl_without_attr  go to state 17


state 2

    0 $accept: decls $end .

    $default  accept


state 3

    6 decl_with_attr: TOK_TYPE . tok_id $@1 optparams '=' type

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 24


state 4

   11 decl_with_attr: TOK_ENUM . tok_id $@3 '{' enumlist '}'

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 25


state 5

    8 decl_with_attr: TOK_LET . tok_id $@2 opttype optinit

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 26


state 6

    9 decl_with_attr: TOK_FUNCTION . function

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id     go to state 27
    funcproto  go to state 28
    function   go to state 29


state 7

   22 decl_with_attr: TOK_REFINE . TOK_CASETYPE tok_id TOK_PLUSEQ '{' casefieldlist '}'
   23               | TOK_REFINE . TOK_CASEFUNC tok_id TOK_PLUSEQ '{' caseexprlist '}'
   24               | TOK_REFINE . TOK_ANALYZER tok_id TOK_PLUSEQ '{' sahlist '}'
   25               | TOK_REFINE . TOK_CONNECTION tok_id TOK_PLUSEQ '{' sahlist '}'
   26               | TOK_REFINE . TOK_FLOW tok_id TOK_PLUSEQ '{' sahlist '}'
   30 decl_without_attr: TOK_REFINE . TOK_TYPEATTR tok_id TOK_PLUSEQ attrlist

    TOK_CASEFUNC    shift, and go to state 30
    TOK_CASETYPE    shift, and go to state 31
    TOK_TYPEATTR    shift, and go to state 32
    TOK_ANALYZER    shift, and go to state 33
    TOK_CONNECTION  shift, and go to state 34
    TOK_FLOW        shift, and go to state 35


state 8

   15 decl_with_attr: TOK_ANALYZER . tok_id $@5 TOK_WITHCONTEXT analyzercontext
   17               | TOK_ANALYZER . tok_id $@6 optparams '{' conn '}'

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 36


state 9

   19 decl_with_attr: TOK_CONNECTION . tok_id $@7 optparams '{' conn '}'

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 37


state 10

   21 decl_with_attr: TOK_FLOW . tok_id $@8 optparams '{' flow '}'

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 38


state 11

   29 decl_without_attr: TOK_LPB_EXTERN . embedded_code TOK_RPB

    $default  reduce using rule 152 (embedded_code)

    embedded_code  go to state 39


state 12

   27 decl_without_attr: TOK_LPB_HEADER . embedded_code TOK_RPB

    $default  reduce using rule 152 (embedded_code)

    embedded_code  go to state 40


state 13

   28 decl_without_attr: TOK_LPB_CODE . embedded_code TOK_RPB

    $default  reduce using rule 152 (embedded_code)

    embedded_code  go to state 41


state 14

   13 decl_with_attr: TOK_EXTERN . TOK_TYPE tok_id $@4

    TOK_TYPE  shift, and go to state 42


state 15

    2 decls: decls decl . optsemicolon

    ';'  shift, and go to state 43

    $default  reduce using rule 31 (optsemicolon)

    optsemicolon  go to state 44


state 16

    3 decl: decl_with_attr . optattrs

    TOK_ATTR_BYTEORDER         shift, and go to state 45
    TOK_ATTR_CHECK             shift, and go to state 46
    TOK_ATTR_CHUNKED           shift, and go to state 47
    TOK_ATTR_EXPORTSOURCEDATA  shift, and go to state 48
    TOK_ATTR_IF                shift, and go to state 49
    TOK_ATTR_LENGTH            shift, and go to state 50
    TOK_ATTR_LET               shift, and go to state 51
    TOK_ATTR_LINEBREAKER       shift, and go to state 52
    TOK_ATTR_MULTILINE         shift, and go to state 53
    TOK_ATTR_ONELINE           shift, and go to state 54
    TOK_ATTR_REFCOUNT          shift, and go to state 55
    TOK_ATTR_REQUIRES          shift, and go to state 56
    TOK_ATTR_RESTOFDATA        shift, and go to state 57
    TOK_ATTR_RESTOFFLOW        shift, and go to state 58
    TOK_ATTR_TRANSIENT         shift, and go to state 59
    TOK_ATTR_UNTIL             shift, and go to state 60

    $default  reduce using rule 168 (optattrs)

    optattrs  go to state 61
    attrlist  go to state 62
    attr      go to state 63


state 17

    4 decl: decl_without_attr .

    $default  reduce using rule 4 (decl)


state 18

   38 tok_id: TOK_TYPE .

    $default  reduce using rule 38 (tok_id)


state 19

   37 tok_id: TOK_FUNCTION .

    $default  reduce using rule 37 (tok_id)


state 20

   33 tok_id: TOK_ID .

    $default  reduce using rule 33 (tok_id)


state 21

   35 tok_id: TOK_ANALYZER .

    $default  reduce using rule 35 (tok_id)


state 22

   34 tok_id: TOK_CONNECTION .

    $default  reduce using rule 34 (tok_id)


state 23

   36 tok_id: TOK_FLOW .

    $default  reduce using rule 36 (tok_id)


state 24

    6 decl_with_attr: TOK_TYPE tok_id . $@1 optparams '=' type

    $default  reduce using rule 5 ($@1)

    $@1  go to state 64


state 25

   11 decl_with_attr: TOK_ENUM tok_id . $@3 '{' enumlist '}'

    $default  reduce using rule 10 ($@3)

    $@3  go to state 65


state 26

    8 decl_with_attr: TOK_LET tok_id . $@2 opttype optinit

    $default  reduce using rule 7 ($@2)

    $@2  go to state 66


state 27

   43 funcproto: tok_id . '(' paramlist ')' ':' type2

    '('  shift, and go to state 67


state 28

   44 function: funcproto . '=' expr
   45         | funcproto . TOK_LPB embedded_code TOK_RPB
   46         | funcproto . ';'

    TOK_LPB  shift, and go to state 68
    '='      shift, and go to state 69
    ';'      shift, and go to state 70


state 29

    9 decl_with_attr: TOK_FUNCTION function .

    $default  reduce using rule 9 (decl_with_attr)


state 30

   23 decl_with_attr: TOK_REFINE TOK_CASEFUNC . tok_id TOK_PLUSEQ '{' caseexprlist '}'

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 71


state 31

   22 decl_with_attr: TOK_REFINE TOK_CASETYPE . tok_id TOK_PLUSEQ '{' casefieldlist '}'

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 72


state 32

   30 decl_without_attr: TOK_REFINE TOK_TYPEATTR . tok_id TOK_PLUSEQ attrlist

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 73


state 33

   24 decl_with_attr: TOK_REFINE TOK_ANALYZER . tok_id TOK_PLUSEQ '{' sahlist '}'

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 74


state 34

   25 decl_with_attr: TOK_REFINE TOK_CONNECTION . tok_id TOK_PLUSEQ '{' sahlist '}'

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 75


state 35

   26 decl_with_attr: TOK_REFINE TOK_FLOW . tok_id TOK_PLUSEQ '{' sahlist '}'

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 76


state 36

   15 decl_with_attr: TOK_ANALYZER tok_id . $@5 TOK_WITHCONTEXT analyzercontext
   17               | TOK_ANALYZER tok_id . $@6 optparams '{' conn '}'

    TOK_WITHCONTEXT  reduce using rule 14 ($@5)
    $default         reduce using rule 16 ($@6)

    $@5  go to state 77
    $@6  go to state 78


state 37

   19 decl_with_attr: TOK_CONNECTION tok_id . $@7 optparams '{' conn '}'

    $default  reduce using rule 18 ($@7)

    $@7  go to state 79


state 38

   21 decl_with_attr: TOK_FLOW tok_id . $@8 optparams '{' flow '}'

    $default  reduce using rule 20 ($@8)

    $@8  go to state 80


state 39

   29 decl_without_attr: TOK_LPB_EXTERN embedded_code . TOK_RPB
  153 embedded_code: embedded_code . TOK_EMBEDDED_ATOM
  154              | embedded_code . TOK_EMBEDDED_STRING
  155              | embedded_code . embedded_pac_primitive

    TOK_RPB              shift, and go to state 81
    TOK_EMBEDDED_ATOM    shift, and go to state 82
    TOK_EMBEDDED_STRING  shift, and go to state 83
    TOK_PAC_VAL          shift, and go to state 84
    TOK_PAC_SET          shift, and go to state 85
    TOK_PAC_TYPE         shift, and go to state 86
    TOK_PAC_CONST_DEF    shift, and go to state 87

    embedded_pac_primitive  go to state 88


state 40

   27 decl_without_attr: TOK_LPB_HEADER embedded_code . TOK_RPB
  153 embedded_code: embedded_code . TOK_EMBEDDED_ATOM
  154              | embedded_code . TOK_EMBEDDED_STRING
  155              | embedded_code . embedded_pac_primitive

    TOK_RPB              shift, and go to state 89
    TOK_EMBEDDED_ATOM    shift, and go to state 82
    TOK_EMBEDDED_STRING  shift, and go to state 83
    TOK_PAC_VAL          shift, and go to state 84
    TOK_PAC_SET          shift, and go to state 85
    TOK_PAC_TYPE         shift, and go to state 86
    TOK_PAC_CONST_DEF    shift, and go to state 87

    embedded_pac_primitive  go to state 88


state 41

   28 decl_without_attr: TOK_LPB_CODE embedded_code . TOK_RPB
  153 embedded_code: embedded_code . TOK_EMBEDDED_ATOM
  154              | embedded_code . TOK_EMBEDDED_STRING
  155              | embedded_code . embedded_pac_primitive

    TOK_RPB              shift, and go to state 90
    TOK_EMBEDDED_ATOM    shift, and go to state 82
    TOK_EMBEDDED_STRING  shift, and go to state 83
    TOK_PAC_VAL          shift, and go to state 84
    TOK_PAC_SET          shift, and go to state 85
    TOK_PAC_TYPE         shift, and go to state 86
    TOK_PAC_CONST_DEF    shift, and go to state 87

    embedded_pac_primitive  go to state 88


state 42

   13 decl_with_attr: TOK_EXTERN TOK_TYPE . tok_id $@4

    TOK_TYPE        shift, and go to state 18
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23

    tok_id  go to state 91


state 43

   32 optsemicolon: ';' .

    $default  reduce using rule 32 (optsemicolon)


state 44

    2 decls: decls decl optsemicolon .

    $default  reduce using rule 2 (decls)


state 45

  174 attr: TOK_ATTR_BYTEORDER . '=' expr

    '='  shift, and go to state 92


state 46

  175 attr: TOK_ATTR_CHECK . expr

    TOK_TYPE        shift, and go to state 18
    TOK_CASE        shift, and go to state 93
    TOK_FUNCTION    shift, and go to state 19
    TOK_ID          shift, and go to state 20
    TOK_NUMBER      shift, and go to state 94
    TOK_STRING      shift, and go to state 95
    TOK_BEGIN_RE    shift, and go to state 96
    TOK_ANALYZER    shift, and go to state 21
    TOK_CONNECTION  shift, and go to state 22
    TOK_FLOW        shift, and go to state 23
    '-'             shift, and go to state 97
    '~'             shift, and go to state 98
    '!'             shift, and go to state 99
    TOK_OFFSETOF    shift, and go to state 100
    TOK_SIZEOF      shift, and go to state 101
    '('             shift, and go to state 102
